# LinearProgramming

./: .gitignore  18335README.md  CMakeLists.txt  CMakeSettings.json  README.md  benchmark.py  environment.yml  example.py  ideas.txt  lib.py  linear.cp313-win_amd64.pyd  main.cpp  main.h  revisedSimplex.ipynb  simplex.cpp  test.py
test/mps/: tiny.mps
test/numpy/: afiro.mps.npz  sc50a.mps.npz  sc50b.mps.npz  tiny.mps.npz
