cmake_minimum_required(VERSION 3.4...3.18)
project(pybindtest)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_PREFIX_PATH "$ENV{CONDA_PREFIX}" ${CMAKE_PREFIX_PATH})
include_directories("$ENV{CONDA_PREFIX}/Library/include/eigen3")
find_package(pybind11 CONFIG REQUIRED)
pybind11_add_module(linear main.cpp)
